# sample-bedrock-deep-researcher

./: .gitignore  LICENSE  README.md  bedrock_deep_research.py  env.tmp  pyproject.toml
.devcontainer/: devcontainer.json
bedrock_deep_research/: __init__.py  config.py  graph.py  model.py  utils.py  web_search.py
bedrock_deep_research/nodes/: __init__.py  article_head_image_generator.py  article_outline_generator.py  compile_final_article.py  completed_sections_formatter.py  final_sections_writer.py  human_feedback_provider.py  initial_researcher.py  initiate_final_section_writing.py  section_search_query_generator.py  section_web_researcher.py  section_writer.py
notebooks/: agentic_writer.ipynb
